Tue May 31 13:49:37 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* p-sort.rb: 2つ下の c-sort.rb の変更に対する対処がなかった(BUG#316)

Fri May 27 23:47:25 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* xmarshaled-queue.c: debug message 削除

Fri May 27 14:22:30 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* p-group-by.c: rb_xmsbcb(_read_buffer)で例外が発生したときにまず
	  例外を保存するようにした. さらに, rb_jump_tagでなく, rb_exc_raize
	  を用いるようにした.
	* xmarshaled-queue.c: 一般オブジェクトの時のバッファリングで, キャッ
	  シュサイズのリミットを越えたときの処理ができていなかった(BUG#314).
	* xmarshaled-queue.c: いきなりEOSが来たときの処理が良くなかった.
	* c-sort.rb: サンプリングソート時に必要なくなったオブジェクトを解
	  放するようにした.

Wed May 25 16:12:49 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* bin/fairy: BUG#315対応

Wed May 25 00:12:11 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* tools/log-analysis.rb: 例外時の処理を追加

Mon May 23 00:49:44 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* tools/log-analysis.rb: プロセスサイズのモリタリング機能を追加

Thu May 12 23:20:45 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* tools/fairy_conf_wizard.rb: fairy.confウイザード追加
	* tools/fairy_perf_graph.rb: 修正

Wed May 11 20:55:07 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* group-by.rb: [BUG#311]対応

Tue Apr 26 23:17:07 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* conf.rb: デフォルト値変更

Tue Apr 19 21:49:43 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.c: Init_xsized_queueだった.
	* xsized-queue.c: Ruby1.9.2のrb_data_type_t対
	  応. XSIZED_QUEUE_LOG_MSTOREは必要ない.
	* conf.rb: XSIZED_QUEUE用プロパティ追加

Tue Apr 19 19:24:39 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.h: rb_fairy_fixnum_buffer_clear,
	  rb_fairy_string_buffer_clear追加にともない追加
	* fixnum-buffer.c, p-xgroup-by.c, string-buffer.c,
	  xmarshaled-queue.c: Ruby1.9.2のrb_data_type_t対応

Tue Apr 19 15:23:09 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fixnum-buffer.c: rb_fairy_fixnum_buffer_clear 追加
	* string-buffer.c: rb_fairy_string_buffer_clear 追加
	* p-group-by.c, xmarshaled-queue.c: REP#306, BUG#307対応
